--- a/src/templates/base_loadbox.html
+++ b/src/templates/base_loadbox.html
@@ -52,7 +52,7 @@
 
     <!-- II) Main Panel -->
     <main>
-        <div class="container margin">{% block content %} {% endblock %}</div>
+        <div class="container" style="margin-top: 4rem; width: 100%;">{% block content %} {% endblock %}</div>
     </main>
 
     <!-- III) Footer panel -->
