--- a/src/templates/house.html
+++ b/src/templates/house.html
@@ -4,12 +4,23 @@
 
 {% block content %}
 
-<div>
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Agregar Circuitos</button>
+<div class="d-flex">
+    <div>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticProyect">Crear Proyecto</button>
+    </div>
+    <div>
+        <button type="button" class="btn btn-primary ms-2" data-bs-toggle="modal" data-bs-target="#staticTableroGeneral">Agregar Tablero General</button>
+    </div>
+    <div>
+        <button type="button" class="btn btn-primary ms-2" data-bs-toggle="modal" data-bs-target="#staticTableroDistribucion">Agregar Tablero Distribucion</button>
+    </div>
+    <div>
+        <button type="button" class="btn btn-primary ms-2" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Agregar Circuitos</button>
+    </div>
 </div>
 
 <table class="table table-hover mt-3">
-    <thead class="table-secondary text-center">
+    <thead class="table-light text-center">
       <tr class="align-middle">
         <th scope="col">Referencia</th>
         <th scope="col">N° Circuito</th>
@@ -27,16 +38,121 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <th scope="row">Enchufes</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-      </tr>
+    {% for circuit in circuits %}
+        <tr class="text-center">
+            <th scope="row">{{ circuit.ref }}</th>
+            <td scope="row">{{ circuit.name }}</td>
+            <td scope="row">{{ circuit.qty }}</td>
+            <td scope="row">{{ circuit.total_center }}</td>
+            <td scope="row">{{ circuit.total_power }}</td>
+            <td scope="row">{{ circuit.total_current }}</td>
+            <td scope="row">{{ circuit.single_voltage }}</td>
+            <td scope="row">{{ circuit.fp }}</td>
+            <td scope="row">{{ circuit.length }}</td>
+            <td scope="row">falta</td>
+            <td scope="row">{{ circuit.method }}</td>
+            <td scope="row">{{ circuit.secctionmm2 }}</td>
+            <td scope="row">{{ circuit.wires }}</td>
+        </tr>
+    {% endfor %}
     </tbody>
   </table>
-<!-- Modal -->
 
+<!-- Modal nuevo proyecto-->
+<div class="modal fade" id="staticProyect" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h1 class="modal-title fs-5" id="staticBackdropLabel">Nuevo Proyecto</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+            <form action="/new_proyect" method="post" id="myProyect">
+                <div class="modal-body">
+                    <div class="input-group my-3">
+                        <span class="input-group-text" id="basic-addon1" style="width: 180px;">Nombre del Proyecto</span>
+                        <input type="text" class="form-control" placeholder="Ingresa nombre del proyecto" aria-label="Username" aria-describedby="basic-addon1" name="name">
+                    </div>                                                          
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Salir</button>
+                    <button type="submit" class="btn btn-primary">Agregar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!-- Modal nuevo tablero general-->
+<div class="modal fade" id="staticTableroGeneral" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="staticBackdropLabel">Nuevo Tablero General</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+            <form action="/add_tgs" method="post" id="myGeneralTable">
+                <div class="modal-body">
+                    <p>Debes elegir un proyecto para agregar un tablero principal.</p>
+                    <select class="form-select my-3 selectpicker" id="proyect-select" data-live-search="true" name="proyect_id">
+                        <option selected>-Seleccione Proyecto-</option>
+                        {% for proyect in proyects %}
+                            <option value="{{ proyect.id }}">{{ proyect.name }}</option>
+                        {% endfor %}
+                    </select>
+                    <div class="input-group my-3">
+                        <span class="input-group-text" id="basic-addon1" style="width: 200px;">Nombre Tablero General</span>
+                        <input type="text" class="form-control" placeholder="Ingresa nombre del tablero" aria-label="Username" aria-describedby="basic-addon1" name="name">
+                    </div>
+                    <div class="input-group my-3">
+                        <span class="input-group-text" id="basic-addon1" style="width: 200px;">Referencia o Tag</span>
+                        <input type="text" class="form-control" placeholder="Ingresa algun identificativo" aria-label="Username" aria-describedby="basic-addon1" name="tag">
+                    </div>                                                           
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Salir</button>
+                    <button type="submit" class="btn btn-primary">Agregar</button>
+                </div>
+            </form>
+      </div>
+    </div>
+</div>
+
+<!-- Modal nuevo tablero distribucion-->
+<div class="modal fade" id="staticTableroDistribucion" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="staticBackdropLabel">Nuevo Tablero de Distribución</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+            <form action="/add_tds" method="post" id="myGeneralTable">
+                <div class="modal-body">
+                    <p>Debes elegir un tablero general para agregar un tablero de distribucion.</p>
+                    <select class="form-select my-2 selectpicker" id="proyect-select" data-live-search="true" name="proyect_id">
+                        <option selected>-Seleccione Proyecto-</option>
+                        {% for tg in tgs %}
+                            <option value="{{ tg.id }}">{{ tg.name }}</option>
+                        {% endfor %}
+                    </select>
+                    <div class="input-group my-2">
+                        <span class="input-group-text" id="basic-addon1" style="width: 230px;">Nombre Tablero distribucion</span>
+                        <input type="text" class="form-control" placeholder="Ingresa nombre" aria-label="Username" aria-describedby="basic-addon1" name="name">
+                    </div>
+                    <div class="input-group my-2">
+                        <span class="input-group-text" id="basic-addon1" style="width: 200px;">Referencia o Tag</span>
+                        <input type="text" class="form-control" placeholder="Ingresa algun identificativo" aria-label="Username" aria-describedby="basic-addon1" name="tag">
+                    </div>                                                           
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Salir</button>
+                    <button type="submit" class="btn btn-primary">Agregar</button>
+                </div>
+            </form>
+      </div>
+    </div>
+</div>
+
+<!-- Modal agregar circuitos-->
 {% with messages = get_flashed_messages(category_filter=['circuito']) %}
 {% if messages %}
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -75,11 +191,11 @@
                     </div>
                     <div class="input-group my-3">
                         <span class="input-group-text" id="basic-addon1">N° de Circuito</span>
-                        <input type="text" class="form-control" placeholder="Ingresa numero de circuito" aria-label="Username" aria-describedby="basic-addon1" name="name">
+                        <input type="number" class="form-control" placeholder="Ingresa numero de circuito" aria-label="Username" aria-describedby="basic-addon1" name="name">
                     </div>
                     <div class="input-group mt-3">
                         <span class="input-group-text" id="basic-addon1">Tipo de Metodo</span>
-                        <select class="form-select" aria-label="Default select example" name="methods">
+                        <select class="form-select" aria-label="Default select example" name="method">
                             <option selected>Selecciona un metodo</option>
                             <option value="a1">Metodo A1</option>
                             <option value="a2">Metodo A2</option>
@@ -92,6 +208,15 @@
                         </select>
                     </div>
                     <div class="input-group mt-3">
+                        <span class="input-group-text" id="basic-addon1">Tipo de Aislación</span>
+                        <select class="form-select" aria-label="Default select example" name="type_isolation">
+                            <option selected>Selecciona tipo aislación</option>
+                            {% for wire in wires %}
+                                <option value="{{ wire.name }}">{{ wire.name }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="input-group mt-3">
                         <span class="input-group-text" id="basic-addon1">Tipo de circuito</span>
                         <select class="form-select" aria-label="Default select example" name="type_circuit">
                             <option selected>Selecciona un tipo</option>
@@ -101,16 +226,17 @@
                     </div>
                     <div class="input-group mt-3">
                         <span class="input-group-text" id="basic-addon1">Cantidad de Cargas</span>
-                        <input type="text" class="form-control" placeholder="Ingresa la cantidad total de cargas" aria-label="Username" aria-describedby="basic-addon1" name="qty">
+                        <input type="number" class="form-control" placeholder="Ingresa la cantidad total de cargas" aria-label="Username" aria-describedby="basic-addon1" name="qty">
+                        <input type="hidden" class="form-control" placeholder="Ingresa la cantidad total de cargas" aria-label="Username" aria-describedby="basic-addon1" name="fp" value="1">
                     </div>
                     <div class="input-group mt-3">
                         <span class="input-group-text" id="basic-addon1">Potencia por Carga</span>
-                        <input type="text" class="form-control" placeholder="Ingresa la potencia por carga" aria-label="Username" aria-describedby="basic-addon1" name="load">
+                        <input type="text" class="form-control" placeholder="Ingresa la potencia por carga" aria-label="Username" aria-describedby="basic-addon1" name="power">
                     </div>
                     <div class="form-text" id="basic-addon4">La Potencia debe ser en Watt.</div>
                     <div class="input-group mt-3">
                         <span class="input-group-text" id="basic-addon1">Ingresa el Voltaje</span>
-                        <select class="form-select" aria-label="Default select example" name="voltage">
+                        <select class="form-select" aria-label="Default select example" name="single_voltage">
                             <option selected>Selecciona un voltaje</option>
                             <option value="0.220">220</option>
                             <option value="0.380" disabled>380</option>
@@ -121,15 +247,6 @@
                         <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4" placeholder="Ejemplo: 12.5" name="length">
                     </div>
                     <div class="form-text" id="basic-addon4">Ingresa el largo total del circuito en metros separado por punto.</div>
-                    <div class="input-group mt-3">
-                        <span class="input-group-text" id="basic-addon1">Tipo de Aislación</span>
-                        <select class="form-select" aria-label="Default select example" name="type_isolation">
-                            <option selected>Selecciona tipo aislación</option>
-                            {% for wire in wires %}
-                                <option value="{{ wire.name }}">{{ wire.name }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
