--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg fixed-top" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-lg fixed-top px-3" style="background-color: #e3f2fd;">
     <div class="container-fluid">
         <a class="navbar-brand" style=" color: rgba(65, 68, 65, 0.981);">Bienvenido</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <span class="nav-link">@{{ user.first_name }}</span>
+                    <span class="nav-link">@{{ user.first_name }} {{ user.last_name }}</span>
                 </li>
                 <li class="nav-item mx-1">
                     <a href="/logout" onclick="confirmar(event)" class="btn btn-secondary">Salir</a>
