--- a/src/templates/house_tds.html
+++ b/src/templates/house_tds.html
@@ -1,7 +1,18 @@
-{% extends "base.html" %} 
+{% extends "base_loadbox.html" %} 
 
 {% block title %} Create Clients {% endblock%}
 
 {% block content %}
-    <h1>Tableros Alumbrado</h1>
+
+<div class="container-fluid">
+    <a href="/loadbox/">Atras</a>
+    <div class="row">
+        <div class="col-lg-12 col-sm-auto">
+            <h3>Resumen</h3>
+        </div>
+    </div>  
+</div>
+
 {% endblock %}
+
+
