--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-expand-lg fixed-top px-3" style="background-color: #e3f2fd;">
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-lg fixed-top" style="background-color: #e3f2fd;">
+    <div class="container-fluid px-3">
         <a class="navbar-brand" style=" color: rgba(65, 68, 65, 0.981);">Bienvenido</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" style="background-color: #e3f2fd;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <span class="nav-link">@{{ user.first_name }} {{ user.last_name }}</span>
                 </li>
