--- a/src/templates/navbar_loadbox.html
+++ b/src/templates/navbar_loadbox.html
@@ -1,26 +1,242 @@
-<nav class="navbar navbar-expand-lg fixed-top px-3" style="background-color: #e3f2fd;">
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-lg fixed-top" style="background-color: #e3f2fd;">
+    <div class="container-fluid align-item-middle px-3">
         <a class="navbar-brand" style=" color: rgba(65, 68, 65, 0.981);">Bienvenido</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse text-start" style="background-color: #e3f2fd;"id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link text-decoration-underline" aria-current="page" href="/dashboard">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-decoration-underline" href="#">Ver Resumén</a>
+                    <a class="nav-link text-decoration-underline" data-bs-toggle="modal" data-bs-target="#staticProyect" href="#">Crear Proyecto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-decoration-underline" data-bs-toggle="modal" data-bs-target="#staticTableroGeneral" href="#">Nuevo Tablero General</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-decoration-underline" data-bs-toggle="modal" data-bs-target="#staticTableroDistribucion" href="#">Nuevo Tablero Distribución</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-decoration-underline" data-bs-toggle="modal" data-bs-target="#staticBackdrop" href="">Agregar Circuitos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-decoration-underline" href="/pro">Ver Resumén</a> 
                 </li>
             </ul>
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item mx-1">
+                <li class="nav-item">
                     <span class="nav-link">@{{ user.first_name }} {{ user.last_name }}</span>
                 </li>
-                <li class="nav-item ms-auto">
+                <li class="nav-item">
                     <a href="/logout" onclick="confirmar(event)" class="btn btn-secondary">Salir</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+
+<!-- Modal nuevo proyecto-->
+<div class="modal fade" id="staticProyect" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h1 class="modal-title fs-5" id="staticBackdropLabel">Nuevo Proyecto</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+            <form action="/new_proyect" method="post" id="myProyect">
+                <div class="modal-body">
+                    <div class="input-group my-3">
+                        <span class="input-group-text" id="basic-addon1" style="width: 180px;">Nombre del Proyecto</span>
+                        <input type="text" class="form-control" placeholder="Ingresa nombre del proyecto" aria-label="Username" aria-describedby="basic-addon1" name="name">
+                    </div>                                                          
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Salir</button>
+                    <button type="submit" class="btn btn-primary">Agregar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!-- Modal nuevo tablero general-->
+<div class="modal fade" id="staticTableroGeneral" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="staticBackdropLabel">Nuevo Tablero General</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+            <form action="/add_tgs" method="post" id="myGeneralTable">
+                <div class="modal-body">
+                    <p>Debes elegir un proyecto para agregar un tablero principal.</p>
+                    <select class="form-select my-3 selectpicker" id="proyect-select" data-live-search="true" name="proyect_id">
+                        <option selected>-Seleccione Proyecto-</option>
+                        {% for proyect in proyects %}
+                            <option value="{{ proyect.id }}">{{ proyect.name }}</option>
+                        {% endfor %}
+                    </select>
+                    <div class="input-group my-3">
+                        <span class="input-group-text" id="basic-addon1" style="width: 200px;">Nombre Tablero General</span>
+                        <input type="text" class="form-control" placeholder="Ingresa nombre del tablero" aria-label="Username" aria-describedby="basic-addon1" name="name">
+                    </div>
+                    <div class="input-group my-3">
+                        <span class="input-group-text" id="basic-addon1" style="width: 200px;">Referencia o Tag</span>
+                        <input type="text" class="form-control" placeholder="Ingresa algun identificativo" aria-label="Username" aria-describedby="basic-addon1" name="tag">
+                    </div>                                                           
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Salir</button>
+                    <button type="submit" class="btn btn-primary">Agregar</button>
+                </div>
+            </form>
+      </div>
+    </div>
+</div>
+
+<!-- Modal nuevo tablero distribucion-->
+<div class="modal fade" id="staticTableroDistribucion" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="staticBackdropLabel">Nuevo Tablero de Distribución</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+            <form action="/add_tds" method="post" id="myGeneralTable">
+                <div class="modal-body">
+                    <p>Debes elegir un tablero general para agregar un tablero de distribucion.</p>
+                    <select class="form-select my-2 selectpicker" id="proyect-select" data-live-search="true" name="tg_id">
+                        <option selected>-Seleccione Tablero General-</option>
+                        {% for tg in tgs %}
+                            <option value="{{ tg.id }}">{{ tg.name }}</option>
+                        {% endfor %}
+                    </select>
+                    <div class="input-group my-2">
+                        <span class="input-group-text" id="basic-addon1" style="width: 230px;">Nombre Tablero distribucion</span>
+                        <input type="text" class="form-control" placeholder="Ingresa nombre" aria-label="Username" aria-describedby="basic-addon1" name="name">
+                    </div>
+                    <div class="input-group my-2">
+                        <span class="input-group-text" id="basic-addon1" style="width: 200px;">Referencia o Tag</span>
+                        <input type="text" class="form-control" placeholder="Ingresa algun identificativo" aria-label="Username" aria-describedby="basic-addon1" name="tag">
+                    </div>                                                           
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Salir</button>
+                    <button type="submit" class="btn btn-primary">Agregar</button>
+                </div>
+            </form>
+      </div>
+    </div>
+</div>
+
+<!-- Modal agregar circuitos-->
+{% with messages = get_flashed_messages(category_filter=['circuito']) %}
+{% if messages %}
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+    <strong>Error:</strong>
+    {% for message in messages %}
+        <p>{{message}}</p>
+    {% endfor %}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{% endif %}
+{% endwith %}
+
+<div class="modal fade modal-lg modal-sm" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form action="/new_circuit" method="post" id="myCircuit" onsubmit="addCircuit(event)">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Agregando Circuitos</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <h6>Primero debes elegir tu proyecto</h6>
+                    <select class="form-select my-3 selectpicker" id="proyect-select" data-live-search="true" onchange="proyect(this)" name="proyect_id">
+                        <option selected>-Seleccione Proyecto-</option>
+                        {% for proyect in proyects %}
+                            <option value="{{ proyect.id }}">{{ proyect.name }}</option>
+                        {% endfor %}
+                    </select>
+                    <h6>A continuacion elige un tablero al que deseas agregar circuitos</h6>
+                    <select class="form-select my-3" name="tg_id" id="tg-select" onchange="tds(this)">
+                        <option selected>-Seleccione Tablero General-</option> 
+                    </select>
+                    <h6 id="td-h6"style="display:none;">Cuentas con tablero de distribución, elige al que deseas agregar circuitos. Si no, deja el espacio en blanco.</h6>
+                    <select class="form-select my-3" name="td_id" id="td-select" style="display:none;">
+                        <option selected>-Seleccione Tablero de Distribución-</option>     
+                    </select>
+                    <div class="input-group my-3">
+                        <span class="input-group-text" id="basic-addon1">Referencia</span>
+                        <input type="text" class="form-control" placeholder="Ubicacion o Referencia" aria-label="Username" aria-describedby="basic-addon1" name="ref">
+                    </div>
+                    <div class="input-group my-3">
+                        <span class="input-group-text" id="basic-addon1">N° de Circuito</span>
+                        <input type="number" class="form-control" placeholder="Ingresa numero de circuito" aria-label="Username" aria-describedby="basic-addon1" name="name">
+                    </div>
+                    <div class="input-group mt-3">
+                        <span class="input-group-text" id="basic-addon1">Tipo de Metodo</span>
+                        <select class="form-select" aria-label="Default select example" name="method">
+                            <option selected>Selecciona un metodo</option>
+                            <option value="a1">Metodo A1</option>
+                            <option value="a2">Metodo A2</option>
+                            <option value="b1">Metodo B1</option>
+                            <option value="b2">Metodo B2</option>
+                            <option value="d1">Metodo D1</option>
+                            <option value="d2">Metodo D2</option>
+                            <option value="e">Metodo E</option>
+                            <option value="f">Metodo F</option>
+                        </select>
+                    </div>
+                    <div class="input-group mt-3">
+                        <span class="input-group-text" id="basic-addon1">Tipo de Aislación</span>
+                        <select class="form-select" aria-label="Default select example" name="type_isolation">
+                            <option selected>Selecciona tipo aislación</option>
+                            {% for wire in wires %}
+                                <option value="{{ wire.name }}">{{ wire.name }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="input-group mt-3">
+                        <span class="input-group-text" id="basic-addon1">Tipo de circuito</span>
+                        <select class="form-select" aria-label="Default select example" name="type_circuit">
+                            <option selected>Selecciona un tipo</option>
+                            <option value="feeder">Alimentador</option>
+                            <option value="subfeeder">Subalimentador</option>
+                        </select>
+                    </div>
+                    <div class="input-group mt-3">
+                        <span class="input-group-text" id="basic-addon1">Cantidad de Cargas</span>
+                        <input type="number" class="form-control" placeholder="Ingresa la cantidad total de cargas" aria-label="Username" aria-describedby="basic-addon1" name="qty">
+                        <input type="hidden" class="form-control" placeholder="Ingresa la cantidad total de cargas" aria-label="Username" aria-describedby="basic-addon1" name="fp" value="1">
+                    </div>
+                    <div class="input-group mt-3">
+                        <span class="input-group-text" id="basic-addon1">Potencia por Carga</span>
+                        <input type="text" class="form-control" placeholder="Ingresa la potencia por carga" aria-label="Username" aria-describedby="basic-addon1" name="power">
+                    </div>
+                    <div class="form-text" id="basic-addon4">La Potencia debe ser en Watt.</div>
+                    <div class="input-group mt-3">
+                        <span class="input-group-text" id="basic-addon1">Ingresa el Voltaje</span>
+                        <select class="form-select" aria-label="Default select example" name="single_voltage">
+                            <option selected>Selecciona un voltaje</option>
+                            <option value="0.220">220</option>
+                            <option value="0.380" disabled>380</option>
+                        </select>
+                    </div>
+                    <div class="input-group mt-3">
+                        <span class="input-group-text" id="basic-addon3">Largo del Circuito</span>
+                        <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4" placeholder="Ejemplo: 12.5" name="length">
+                    </div>
+                    <div class="form-text" id="basic-addon4">Ingresa el largo total del circuito en metros separado por punto.</div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="submit" class="btn btn-primary" onclick="succes()">Agregar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
