--- a/src/templates/detail_circuit_tgs.html
+++ b/src/templates/detail_circuit_tgs.html
@@ -1,7 +1,8 @@
-{% extends "base.html" %} 
+{% extends "base_loadbox.html" %} 
 
 {% block title %} Create Clients {% endblock%}
 
 {% block content %}
     <h1>Circuitos electricos</h1>
+    <a href="/loadbox/">atras</a>
 {% endblock %}
